--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
+    "supabase": "^2.20.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
